# binja-pattern

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build.sh  clean.sh  plugin.json  prebuild.bat  prebuild.sh
include/: BackgroundTaskThread.h  BinaryNinja.h  ParallelFunctions.h  PatternLoader.h  PatternMaker.h  PatternScanner.h
python/: binarypattern.py
src/: BinaryNinja.cpp  PatternLoader.cpp  PatternMaker.cpp  PatternScanner.cpp  main.cpp
